<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ivLogo"
        android:src="@drawable/logo" />

     <EditText
         android:id="@+id/eUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivLogo"
         android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="@string/eUsername"
         android:singleLine="true" 
         android:inputType="text|textNoSuggestions" />

     <EditText
         android:id="@+id/ePassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/eUsername"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="@string/ePassword"
         android:inputType="textPassword" />

     <CheckBox
         android:id="@+id/cbRememberMe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/ePassword"
         android:layout_marginTop="20dp"
         android:text="@string/cbRememberMe" />

     <Button
         android:id="@+id/bConnect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/cbRememberMe"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:text="@string/bConnect"
         android:onClick="onConnect" />

</RelativeLayout>